changed or || with and &&

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 </head>
 <body>
     
+    <h1> JS Fizz and Buzz</h1>
 
+    <div>
+        <ul>
+            
+        </ul>
+    </div>
 
     <script src="js/myscript.js"></script>
 </body>
