--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 <body>
     
-    <h1> JS Fizz and Buzz</h1>
+    <h1> JS Fizz, Buzz or Fizzbuzz</h1>
 
     <div>
         <ul>
-            
+
         </ul>
     </div>
 
