--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     
-    <h1> JS Fizz, Buzz or Fizzbuzz</h1>
+    <h1> 
+        JS Fizz, Buzz or Fizzbuzz
+    </h1>
 
     <div>
         <ul>
